--- a/SplashScreenWithSwipeImages/Base.lproj/Main.storyboard
+++ b/SplashScreenWithSwipeImages/Base.lproj/Main.storyboard
@@ -1,14 +1,24 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SplashScreenWithSwipeImages" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +26,73 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jK3-VR-cWf">
+                                <rect key="frame" x="0.0" y="20" width="375" height="533.5"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="swE-72-V1c" appends="YES" id="tys-AB-Bot"/>
+                                    <outletCollection property="gestureRecognizers" destination="niO-Lb-GyE" appends="YES" id="bue-xv-Qf2"/>
+                                </connections>
+                            </imageView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="cam-S8-foT">
+                                <rect key="frame" x="0.0" y="553.5" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="s2B-8Q-tXQ"/>
+                                </constraints>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="currentPageIndicatorTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ryu-Wq-FQL">
+                                <rect key="frame" x="20" y="608.5" width="335" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="0fc-bu-OoO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jK3-VR-cWf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6sd-pu-lpx"/>
+                            <constraint firstAttribute="trailing" secondItem="jK3-VR-cWf" secondAttribute="trailing" id="8qx-gb-WKJ"/>
+                            <constraint firstItem="ryu-Wq-FQL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="9l7-Ss-XwO"/>
+                            <constraint firstAttribute="trailing" secondItem="ryu-Wq-FQL" secondAttribute="trailing" constant="20" id="CEt-1V-dW6"/>
+                            <constraint firstItem="cam-S8-foT" firstAttribute="top" secondItem="jK3-VR-cWf" secondAttribute="bottom" id="Jtp-05-DJo"/>
+                            <constraint firstAttribute="trailing" secondItem="cam-S8-foT" secondAttribute="trailing" id="M1U-x3-BIY"/>
+                            <constraint firstItem="cam-S8-foT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Qn8-fN-nji"/>
+                            <constraint firstItem="cam-S8-foT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WBz-Th-dw4"/>
+                            <constraint firstItem="ryu-Wq-FQL" firstAttribute="top" secondItem="cam-S8-foT" secondAttribute="bottom" constant="5" id="XKA-C5-Rj7"/>
+                            <constraint firstItem="jK3-VR-cWf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Ztj-a3-dI3"/>
+                            <constraint firstItem="jK3-VR-cWf" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.8" id="u9Q-E8-acx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="pageController" destination="cam-S8-foT" id="8FT-VQ-jXC"/>
+                        <outlet property="skipButton" destination="ryu-Wq-FQL" id="WzR-4a-0ua"/>
+                        <outlet property="splashImageView" destination="jK3-VR-cWf" id="wGN-00-pao"/>
+                        <outlet property="swipeLeft" destination="niO-Lb-GyE" id="chw-Im-ri1"/>
+                        <outlet property="swipeRight" destination="swE-72-V1c" id="aXl-Pv-hNe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="swE-72-V1c">
+                    <connections>
+                        <action selector="swipeToRight:" destination="BYZ-38-t0r" id="F0b-PY-1NB"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="AVf-fE-g2B"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="left" id="niO-Lb-GyE">
+                    <connections>
+                        <action selector="swipeToLeft:" destination="BYZ-38-t0r" id="vV8-x3-gfQ"/>
+                        <outlet property="delegate" destination="BYZ-38-t0r" id="DqG-uI-K1R"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
 </document>
